fix z-index for background text

--- a/src/components/backgroundText/backgroundText.module.css
+++ b/src/components/backgroundText/backgroundText.module.css
@@ -1,4 +1,5 @@
 .container {
+    z-index: -1;
     position: absolute;
     width: -webkit-fill-available;
     height: fit-content;
